Added Map class, allowed for neighbours to now be stored as Ids in Node.neighbours, to ensure that they point to the correct node with correct data